module system compatibility

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script src="pulse.js"></script>
     <script>
-    (new Pulse(document.getElementById("container"), {
+    (new pulse(document.getElementById("container"), {
         size: 64,
         color: "#00f000",
         background: "#111"
